...
    <string name="tutorial_use_apnea">Breath-hold training</string>
    <string name="tutorial_use_pomodoro">Pomodoro timer</string>
    <string name="tutorial_use_hiit">HIIT intervals</string>
    <string name="tutorial_use_custom">Whatever you need</string>
    <string name="more">More</string>
    <string name="more_about">About</string>
    <string name="more_about_url" translatable="false">https://gitlab.com/beavuck-services/stop-and-go</string>
    <string name="more_privacy">Privacy</string>
    <string name="more_privacy_url" translatable="false">https://gitlab.com/beavuck-services/stop-and-go/-/blob/main/PRIVACY.md</string>
    <string name="more_license">License</string>
    <string name="more_license_url" translatable="false">https://gitlab.com/beavuck-services/stop-and-go/-/blob/main/UNLICENSE</string>
    <string name="more_tip">Tip the dev</string>
    <string name="more_tip_url" translatable="false">https://buymeacoffee.com/beavuck.dev</string>
...
